--- a/_posts/2020-06-14-Andhadhun-2018.md
+++ b/_posts/2020-06-14-Andhadhun-2018.md
@@ -19,7 +19,7 @@ tags:
 
 <div class="video-wrapper">
 <iframe id="myframe" scrolling="no" allowfullscreen="" frameborder="0"  height="360"
-src="https://playhydrax.com/?v=evaTIojiQQ width="640"></iframe>
+src="https://playhydrax.com/?v=evaTIojiQQ" width="640"></iframe>
 </div>
 
 <div style='width:100%; height:10px; position:relative; margin-left: auto; margin-right: auto; overflow: hidden;'></div>
