--- a/_posts/2020-06-14-Dangal-2016.md
+++ b/_posts/2020-06-14-Dangal-2016.md
@@ -35,7 +35,7 @@ src="https://playhydrax.com/?v=mKnZebIL1MP&sub=https://movies.xtapo.com/assets/s
 <script>
  var link1 = "https://playhydrax.com/?v=mKnZebIL1MP&sub=https://movies.xtapo.com/assets/sub/Dangal.2016.1080p.BluRay.x264-[YTS.PE].srt&sub-lang=English"
  var link2 = "https://www.fembed.com/v/13n-juj824e42g1"
- var link3 = "SEoslUaeuBthGr9w3rSYLAxIB%252BiaHvVDaMnUVOgn%252FECYKDw5wK93x1QzprCgI8Idu7J5DHO8vGDgIYU%252FRQeIbqxfPZz%252Fu7pQu2CEGgBZwtpNbDzH3cQ5gJfAmSGkAJbgnxC34DgME%252Bti1muE2K48iDvcxRExkJFiEo19itVjspLjOdrgK9AfH4PfWl1C4V0dfx%252FOb7pJ1oYlh0e9%252B5qUXcyakbl7xZRTrO8LIZD4PZ%252BX5xH3YDbHECWedTyzwdnVzy7lwnDtizl55FGYhqHGtDvAQFnegxAK79s0NbNOjp4T8FbfbYRhPur0HvyVSLPjA%253D"
+ var link3 = "https://gdriveplayer.me/embed2.php?link=SEoslUaeuBthGr9w3rSYLAxIB%252BiaHvVDaMnUVOgn%252FECYKDw5wK93x1QzprCgI8Idu7J5DHO8vGDgIYU%252FRQeIbqxfPZz%252Fu7pQu2CEGgBZwtpNbDzH3cQ5gJfAmSGkAJbgnxC34DgME%252Bti1muE2K48iDvcxRExkJFiEo19itVjspLjOdrgK9AfH4PfWl1C4V0dfx%252FOb7pJ1oYlh0e9%252B5qUXcyakbl7xZRTrO8LIZD4PZ%252BX5xH3YDbHECWedTyzwdnVzy7lwnDtizl55FGYhqHGtDvAQFnegxAK79s0NbNOjp4T8FbfbYRhPur0HvyVSLPjA%253D"
 
  function link_1() {
  var x = document.getElementsByClassName("button_link");
