--- a/_posts/2020-06-14-Dangal-2016.md
+++ b/_posts/2020-06-14-Dangal-2016.md
@@ -21,7 +21,7 @@ tags:
 
 <div class="video-wrapper">
 <iframe id="myframe" scrolling="no" allowfullscreen="" frameborder="0"  height="360"
-src="https://playhydrax.com/?v=mKnZebIL1MP&sub=https://movies.xtapo.com/assets/sub/Dangal.2016.1080p.BluRay.x264-[YTS.PE].srt&sub-lang=English" width="640"></iframe>
+src="https://playhydrax.com/?v=mKnZebIL1MP&sub=https://movies.xtapo.com/assets/sub/Dangal.2016.srt&sub-lang=English" width="640"></iframe>
 </div>
 
 <div style='width:100%; height:10px; position:relative; margin-left: auto; margin-right: auto; overflow: hidden;'></div>
@@ -33,9 +33,9 @@ src="https://playhydrax.com/?v=mKnZebIL1MP&sub=https://movies.xtapo.com/assets/s
 <div style='width:100%; height:10px; position:relative; margin-left: auto; margin-right: auto; overflow: hidden;'></div>
 
 <script>
- var link1 = "https://playhydrax.com/?v=mKnZebIL1MP&sub=https://movies.xtapo.com/assets/sub/Dangal.2016.1080p.BluRay.x264-[YTS.PE].srt&sub-lang=English"
+ var link1 = "https://playhydrax.com/?v=mKnZebIL1MP&sub=https://movies.xtapo.com/assets/sub/Dangal.2016.srt&sub-lang=English"
  var link2 = "https://www.fembed.com/v/13n-juj824e42g1"
- var link3 = "https://gdriveplayer.me/embed2.php?link=SEoslUaeuBthGr9w3rSYLAxIB%252BiaHvVDaMnUVOgn%252FECYKDw5wK93x1QzprCgI8Idu7J5DHO8vGDgIYU%252FRQeIbqxfPZz%252Fu7pQu2CEGgBZwtpNbDzH3cQ5gJfAmSGkAJbgnxC34DgME%252Bti1muE2K48iDvcxRExkJFiEo19itVjspLjOdrgK9AfH4PfWl1C4V0dfx%252FOb7pJ1oYlh0e9%252B5qUXcyakbl7xZRTrO8LIZD4PZ%252BX5xH3YDbHECWedTyzwdnVzy7lwnDtizl55FGYhqHGtDvAQFnegxAK79s0NbNOjp4T8FbfbYRhPur0HvyVSLPjA%253D"
+ var link3 = "https://gdriveplayer.me/embed2.php?link=kGsM2bYfDHDUdhJN1JM2BwQkb3JpX8HhWq3qt1j560X2%252FePixjQP8e%252FiMdi8j4PQgl2VOtQcU4smJ%252Bvv9QO0uxQ4h8WsQByJL6BDvJHX%252BonzHTM9ghcucVuF5pK%252BWNJne9rdQKUfXoUKXxkl3AJD1Lsmc%252BqrMmRLJ5XzA16nyEL51X3OsiS2StMyA0Ckjnnw2OrKnHwrMtla7WN2a7ANh0PbVF1gUYYtdIxgfcxGddh71HQwNbYvI2s%252BiKXvnq7C0558LTR4WJMuw9g2LCvKq0WNyPpCEfcwTzoDCJlgV1mQ%253D%253D"
 
  function link_1() {
  var x = document.getElementsByClassName("button_link");
