--- a/_posts/2020-06-14-Andhadhun-2018.md
+++ b/_posts/2020-06-14-Andhadhun-2018.md
@@ -19,7 +19,7 @@ tags:
 
 <div class="video-wrapper">
 <iframe id="myframe" scrolling="no" allowfullscreen="" frameborder="0"  height="360"
-src="https://playhydrax.com/?v=evaTIojiQQ&sub=https://movies.xtapo.com/assets/sub/Andhadhun.2018.720p.BluRay.x264-[YTS.AM].srt&sub-lang=English" width="640"></iframe>
+src="https://playhydrax.com/?v=evaTIojiQQ&sub=https://movies.xtapo.com/assets/sub/Andhadhun.2018.srt&sub-lang=English" width="640"></iframe>
 </div>
 
 <div style='width:100%; height:10px; position:relative; margin-left: auto; margin-right: auto; overflow: hidden;'></div>
@@ -31,9 +31,9 @@ src="https://playhydrax.com/?v=evaTIojiQQ&sub=https://movies.xtapo.com/assets/su
 <div style='width:100%; height:10px; position:relative; margin-left: auto; margin-right: auto; overflow: hidden;'></div>
 
 <script>
- var link1 = "https://playhydrax.com/?v=evaTIojiQQ&sub=https://movies.xtapo.com/assets/sub/Andhadhun.2018.720p.BluRay.x264-[YTS.AM].srt&sub-lang=English"
+ var link1 = "https://playhydrax.com/?v=evaTIojiQQ&sub=https://movies.xtapo.com/assets/sub/Andhadhun.2018.srt&sub-lang=English"
  var link2 = "https://www.fembed.com/v/qyr1xaexg5q8zn0"
- var link3 = "https://gdriveplayer.me/embed2.php?link=4cVYIZxnvM5koPMjKYK7bwnFg6G1pljJVc6QOtJoO6o1u5KOcQ%252BOwuf2bPYlEEWqS6CTCbkG4o7kj93UAi3BttyecjBsuYSQ8%252F2cDoqsmbbFwDDav12qDmRIATTSPeHyZ2cpPJaFVaDxxrkgcOxUWGN8GNF90aFpATS%252B7o%252BSkdbVBaGzt%252FZjciGPAgEyLUOllWQq7MaOoMo%252Fm5uwq%252BE3OZnjAgi51N82hImC%252FEAjHfvRdKHKGs12xM7VAB7aakAKylzHtVAVNljPlAqI5bMJOps12q5%252FrW10T8FB8HOXzKDtyuZJwdU%252BRBfxXx%252BmnEIV8%253D"
+ var link3 = "https://gdriveplayer.me/embed2.php?link=w0kvoQKAhFXJ0tcvsOpKSA7SqoMD4Zsdz87wud5q57a6e%252FcT%252BzDIT%252BMXADWLjzh%252F0oq8IwM158XT%252FqY%252F3WkUgh92mXrZJuOehtR%252FGwl%252FmpOZOycB0uxX%252BPBMrnRfmPmf4xsv%252BcBDZp4qRH20eUYRc9Hna6TSLBjxPuwhvd6IYyNTB0PgcOHCfFeJImpWzZ4bC6KZfXotyXHHvcFMKz7%252FUOGPp4WY5NYhrH2lz50l2Ma4LdzlPPLj70MLVaOmQBHiE4A1wWU%252Bmrlvq1TLswzoVzEHCqeQuLObIdn7xq4oQJGQ%253D%253D"
 
  function link_1() {
  var x = document.getElementsByClassName("button_link");
