--- a/_posts/2020-06-14-Green-Book-2018.md
+++ b/_posts/2020-06-14-Green-Book-2018.md
@@ -21,7 +21,7 @@ tags:
 
 <div class="video-wrapper">
 <iframe id="myframe" scrolling="no" allowfullscreen="" frameborder="0"  height="360"
-src="https://playhydrax.com/?v=uRsQg4c4C" width="640"></iframe>
+src="https://playhydrax.com/?v=uRsQg4c4C&sub=https://movies.xtapo.com/assets/sub/Green-Book-2018.srt&sub-lang=English" width="640"></iframe>
 </div>
 
 <div style='width:100%; height:10px; position:relative; margin-left: auto; margin-right: auto; overflow: hidden;'></div>
@@ -33,8 +33,8 @@ src="https://playhydrax.com/?v=uRsQg4c4C" width="640"></iframe>
 <div style='width:100%; height:10px; position:relative; margin-left: auto; margin-right: auto; overflow: hidden;'></div>
 
 <script>
- var link1 = "https://playhydrax.com/?v=uRsQg4c4C"
- var link2 = "https://gdriveplayer.me/embed2.php?link=T%252FlKxYcc%252BjyJVUGd1soDDw78jG01BR5G2qdENlwLo0Jwlok6SkWVd2ZP%252F0GJTVMA%252BteVNeNH8jpCpH%252BmDPY5axXV0xFWRKa3bhc8T14ynwt0b4K%252B0P%252FoYcXsK%252B31XwczyEQ2jSWAtidHaio6%252B5GsMCU1NEimaxRkY9ftUdhhXxlqIymGoUWR0R3M%252BFFU44nw4Np9fcyK0JqIu8hi1xvRWs"
+ var link1 = "https://playhydrax.com/?v=uRsQg4c4C&sub=https://movies.xtapo.com/assets/sub/Green-Book-2018.srt&sub-lang=English"
+ var link2 = "https://gdriveplayer.me/embed2.php?link=MM7eahg4eO%252FUN00GEyZdbwdxdoVCGH4HU%252F9OQ9hqFKjqMCRnlcWLR2G0nbs%252BnbRFWld%252FI4ji8oSGxiRvIgE9rBc84PUmSgLvn55%252Fp1gvO3G2QPNwQZlscfXHERhOlABSr9hEkXRhf3XqX5hY6TRLEC46RNpZyQXOQOHX1HtXozdnQ8iQ2fXG8fu3GAX5obd90PI4mQVUW8DVfPUSfupzpgKZ3fZSY%252FCd15LdZxs%252FZZtWoqDFgTHLEcMUwk4Ew%252FSJDOudHv5fxCLEoZfwo%252FAy6X5Td9FhkpV5QvGv9607HTnQ%253D%253D"
  var link3 = "https://database.gdriveplayer.me/player.php?imdb=tt6966692"
 
  function link_1() {
