--- a/_posts/2020-06-14-Andhadhun-2018.md
+++ b/_posts/2020-06-14-Andhadhun-2018.md
@@ -6,7 +6,7 @@ title: Andhadhun
 description: A series of mysterious events change the life of a blind pianist, who must now report a crime that he should technically know nothing of.
 image: /assets/img/uploads/Andhadhun-2018.jpg
 optimized_image: /assets/img/uploads/Andhadhun-2018.jpg
-category: Movies
+category: movies
 tags:
   - Crime
   - Thriller
