--- a/_posts/2020-06-14-Dangal-2016.md
+++ b/_posts/2020-06-14-Dangal-2016.md
@@ -6,7 +6,7 @@ title: Dangal
 description: Former wrestler Mahavir Singh Phogat and his two wrestler daughters struggle towards glory at the Commonwealth Games in the face of societal oppression.
 image: /assets/img/uploads/Dangal-2016.jpg
 optimized_image: /assets/img/uploads/Dangal-2016.jpg
-category: Movies
+category: movies
 tags:
   - Action
   - Biography
