--- a/_posts/2020-06-14-Gone-Girl-2014.md
+++ b/_posts/2020-06-14-Gone-Girl-2014.md
@@ -6,7 +6,7 @@ title: Gone Girl
 description: With his wife's disappearance having become the focus of an intense media circus, a man sees the spotlight turned on him when it's suspected that he may not be innocent.
 image: /assets/img/uploads/Gone-Girl-2014.jpg
 optimized_image: /assets/img/uploads/Gone-Girl-2014.jpg
-category: Movies
+category: movies
 tags:
   - Drama
   - Mystery 
