--- a/_posts/2020-06-14-Green-Book-2018.md
+++ b/_posts/2020-06-14-Green-Book-2018.md
@@ -6,7 +6,7 @@ title: Green Book
 description: A working-class Italian-American bouncer becomes the driver of an African-American classical pianist on a tour of venues through the 1960s American South.
 image: /assets/img/uploads/Green-Book-2018.jpg
 optimized_image: /assets/img/uploads/Green-Book-2018.jpg
-category: Movies
+category: movies
 tags:
  - Biography
  - Comedy
