--- a/_posts/2020-06-13-A-Separation-2011.md
+++ b/_posts/2020-06-13-A-Separation-2011.md
@@ -6,7 +6,7 @@ title: A Separation (2011)
 description: A married couple are faced with a difficult decision - to improve the life of their child by moving to another country or to stay in Iran and look after a deteriorating parent who has Alzheimer's disease.
 image: /assets/img/uploads/A-Separation.jpg
 optimized_image: /assets/img/uploads/A-Separation.jpg
-category: Movies
+category: movies
 tags:
   - Drama
 ---
