--- a/_posts/2020-06-14-Drishyam-2015.md
+++ b/_posts/2020-06-14-Drishyam-2015.md
@@ -6,7 +6,7 @@ title: Drishyam
 description: Desperate measures are taken by a man who tries to save his family from the dark side of the law, after they commit an unexpected crime.
 image: /assets/img/uploads/Drishyam-2015.jpg
 optimized_image: /assets/img/uploads/Drishyam-2015.jpg
-category: Movies
+category: movies
 tags:
   - Crime
   - Drama
